added curves and margin

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     
 
     <h1>Card Flip with Text</h1>
-    <h3>Hover over the image below:</h3>
+    <h1>Hover over the image below:</h1>
+
+
     <div class="container">
     <div class="flip-card">
       <div class="flip-card-inner" id="flex1">
         <div class="flip-card-front">
-          <img src="/images/img1.jpg" alt="Avatar" style="width:300px;height:300px;">
+          <img src="/images/img1.jpg" alt="Avatar" style="width:300px;height:300px;" class="ri">
         </div>
         <div class="flip-card-back">
           <h1>Anonymous</h1> 
@@ -32,7 +34,7 @@
     <div class="flip-card">
         <div class="flip-card-inner" id="flex2">
           <div class="flip-card-front">
-            <img src="/images/img2.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="/images/img2.png" alt="Avatar" style="width:300px;height:300px;" class="ri">
           </div>
           <div class="flip-card-back">
             <h1>Encrypto27</h1> 
@@ -45,7 +47,7 @@
       <div class="flip-card" id="flex3">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/images/img3.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="/images/img3.png" alt="Avatar" style="width:300px;height:300px;" class="ri">
           </div>
           <div class="flip-card-back">
             <h1>Encrypto27</h1> 
@@ -58,7 +60,7 @@
       <div class="flip-card" id="main">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/images/img4.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="/images/img4.png" alt="Avatar" style="width:300px;height:300px;" class="ri">
           </div>
           <div class="flip-card-back">
             <h1>Encrypto27</h1> 
@@ -71,7 +73,7 @@
       <div class="flip-card" id="main">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/images/img5.png" alt="Avatar" style="width:300px;height:300px;">
+            <img src="/images/img5.png" alt="Avatar" style="width:300px;height:300px;" class="ri">
           </div>
           <div class="flip-card-back">
             <h1>Wallpaper</h1> 
@@ -82,7 +84,7 @@
       <div class="flip-card" id="main">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/images/img6.jpg" alt="Avatar" style="width:300px;height:300px;">
+            <img src="/images/img6.jpg" alt="Avatar" style="width:300px;height:300px;" class="ri">
           </div>
           <div class="flip-card-back">
             <h1>DA</h1> 
